compiscript-analyzer-work/src/generated/CompiscriptParser.ts
// Generated from src/grammars/Compiscript.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { CompiscriptListener } from "./CompiscriptListener";
import { CompiscriptVisitor } from "./CompiscriptVisitor";


export class CompiscriptParser extends Parser {
	public static readonly LET = 1;
	public static readonly VAR = 2;
	public static readonly CONST = 3;
	public static readonly FUNCTION = 4;
	public static readonly CLASS = 5;
	public static readonly PRINT = 6;
	public static readonly IF = 7;
	public static readonly ELSE = 8;
	public static readonly WHILE = 9;
	public static readonly DO = 10;
	public static readonly FOR = 11;
	public static readonly FOREACH = 12;
	public static readonly IN = 13;
	public static readonly BREAK = 14;
	public static readonly CONTINUE = 15;
	public static readonly RETURN = 16;
	public static readonly TRY = 17;
	public static readonly CATCH = 18;
	public static readonly SWITCH = 19;
	public static readonly CASE = 20;
	public static readonly DEFAULT = 21;
	public static readonly NEW = 22;
	public static readonly THIS = 23;
	public static readonly TRUE = 24;
	public static readonly FALSE = 25;
	public static readonly NULL = 26;
	public static readonly BOOLEAN_TYPE = 27;
	public static readonly INTEGER_TYPE = 28;
	public static readonly FLOAT_TYPE = 29;
	public static readonly STRING_TYPE = 30;
	public static readonly OR = 31;
	public static readonly AND = 32;
	public static readonly EQUAL = 33;
	public static readonly NOT_EQUAL = 34;
	public static readonly LTE = 35;
	public static readonly GTE = 36;
	public static readonly ASSIGN = 37;
	public static readonly LT = 38;
	public static readonly GT = 39;
	public static readonly PLUS = 40;
	public static readonly MINUS = 41;
	public static readonly STAR = 42;
	public static readonly SLASH = 43;
	public static readonly PERCENT = 44;
	public static readonly NOT = 45;
	public static readonly QUESTION = 46;
	public static readonly COLON = 47;
	public static readonly DOT = 48;
	public static readonly COMMA = 49;
	public static readonly SEMI = 50;
	public static readonly LPAREN = 51;
	public static readonly RPAREN = 52;
	public static readonly LBRACE = 53;
	public static readonly RBRACE = 54;
	public static readonly LBRACKET = 55;
	public static readonly RBRACKET = 56;
	public static readonly FloatLiteral = 57;
	public static readonly IntegerLiteral = 58;
	public static readonly StringLiteral = 59;
	public static readonly Identifier = 60;
	public static readonly WS = 61;
	public static readonly COMMENT = 62;
	public static readonly MULTILINE_COMMENT = 63;
	public static readonly RULE_program = 0;
	public static readonly RULE_statement = 1;
	public static readonly RULE_block = 2;
	public static readonly RULE_variableDeclaration = 3;
	public static readonly RULE_constantDeclaration = 4;
	public static readonly RULE_typeAnnotation = 5;
	public static readonly RULE_initializer = 6;
	public static readonly RULE_expressionStatement = 7;
	public static readonly RULE_printStatement = 8;
	public static readonly RULE_ifStatement = 9;
	public static readonly RULE_whileStatement = 10;
	public static readonly RULE_doWhileStatement = 11;
	public static readonly RULE_forStatement = 12;
	public static readonly RULE_forInitializer = 13;
	public static readonly RULE_foreachStatement = 14;
	public static readonly RULE_breakStatement = 15;
	public static readonly RULE_continueStatement = 16;
	public static readonly RULE_returnStatement = 17;
	public static readonly RULE_tryCatchStatement = 18;
	public static readonly RULE_switchStatement = 19;
	public static readonly RULE_switchCase = 20;
	public static readonly RULE_defaultCase = 21;
	public static readonly RULE_functionDeclaration = 22;
	public static readonly RULE_parameters = 23;
	public static readonly RULE_parameter = 24;
	public static readonly RULE_classDeclaration = 25;
	public static readonly RULE_classMember = 26;
	public static readonly RULE_expression = 27;
	public static readonly RULE_assignmentExpression = 28;
	public static readonly RULE_conditionalExpression = 29;
	public static readonly RULE_logicalOrExpression = 30;
	public static readonly RULE_logicalAndExpression = 31;
	public static readonly RULE_equalityExpression = 32;
	public static readonly RULE_relationalExpression = 33;
	public static readonly RULE_additiveExpression = 34;
	public static readonly RULE_multiplicativeExpression = 35;
	public static readonly RULE_unaryExpression = 36;
	public static readonly RULE_primaryExpression = 37;
	public static readonly RULE_literalExpression = 38;
	public static readonly RULE_leftHandSide = 39;
	public static readonly RULE_primaryAtom = 40;
	public static readonly RULE_suffixOperator = 41;
	public static readonly RULE_arguments = 42;
	public static readonly RULE_arrayLiteral = 43;
	public static readonly RULE_type = 44;
	public static readonly RULE_baseType = 45;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "statement", "block", "variableDeclaration", "constantDeclaration", 
		"typeAnnotation", "initializer", "expressionStatement", "printStatement", 
		"ifStatement", "whileStatement", "doWhileStatement", "forStatement", "forInitializer", 
		"foreachStatement", "breakStatement", "continueStatement", "returnStatement", 
		"tryCatchStatement", "switchStatement", "switchCase", "defaultCase", "functionDeclaration", 
		"parameters", "parameter", "classDeclaration", "classMember", "expression", 
		"assignmentExpression", "conditionalExpression", "logicalOrExpression", 
		"logicalAndExpression", "equalityExpression", "relationalExpression", 
		"additiveExpression", "multiplicativeExpression", "unaryExpression", "primaryExpression", 
		"literalExpression", "leftHandSide", "primaryAtom", "suffixOperator", 
		"arguments", "arrayLiteral", "type", "baseType",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'let'", "'var'", "'const'", "'function'", "'class'", "'print'", 
		"'if'", "'else'", "'while'", "'do'", "'for'", "'foreach'", "'in'", "'break'", 
		"'continue'", "'return'", "'try'", "'catch'", "'switch'", "'case'", "'default'", 
		"'new'", "'this'", "'true'", "'false'", "'null'", "'boolean'", "'integer'", 
		"'float'", "'string'", "'||'", "'&&'", "'=='", "'!='", "'<='", "'>='", 
		"'='", "'<'", "'>'", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'?'", 
		"':'", "'.'", "','", "';'", "'('", "')'", "'{'", "'}'", "'['", "']'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "LET", "VAR", "CONST", "FUNCTION", "CLASS", "PRINT", "IF", 
		"ELSE", "WHILE", "DO", "FOR", "FOREACH", "IN", "BREAK", "CONTINUE", "RETURN", 
		"TRY", "CATCH", "SWITCH", "CASE", "DEFAULT", "NEW", "THIS", "TRUE", "FALSE", 
		"NULL", "BOOLEAN_TYPE", "INTEGER_TYPE", "FLOAT_TYPE", "STRING_TYPE", "OR", 
		"AND", "EQUAL", "NOT_EQUAL", "LTE", "GTE", "ASSIGN", "LT", "GT", "PLUS", 
		"MINUS", "STAR", "SLASH", "PERCENT", "NOT", "QUESTION", "COLON", "DOT", 
		"COMMA", "SEMI", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", 
		"FloatLiteral", "IntegerLiteral", "StringLiteral", "Identifier", "WS", 
		"COMMENT", "MULTILINE_COMMENT",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(CompiscriptParser._LITERAL_NAMES, CompiscriptParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return CompiscriptParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Compiscript.g4"; }

	// @Override
	public get ruleNames(): string[] { return CompiscriptParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return CompiscriptParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(CompiscriptParser._ATN, this);
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, CompiscriptParser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 95;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << CompiscriptParser.LET) | (1 << CompiscriptParser.VAR) | (1 << CompiscriptParser.CONST) | (1 << CompiscriptParser.FUNCTION) | (1 << CompiscriptParser.CLASS) | (1 << CompiscriptParser.PRINT) | (1 << CompiscriptParser.IF) | (1 << CompiscriptParser.WHILE) | (1 << CompiscriptParser.DO) | (1 << CompiscriptParser.FOR) | (1 << CompiscriptParser.FOREACH) | (1 << CompiscriptParser.BREAK) | (1 << CompiscriptParser.CONTINUE) | (1 << CompiscriptParser.RETURN) | (1 << CompiscriptParser.TRY) | (1 << CompiscriptParser.SWITCH) | (1 << CompiscriptParser.NEW) | (1 << CompiscriptParser.THIS) | (1 << CompiscriptParser.TRUE) | (1 << CompiscriptParser.FALSE) | (1 << CompiscriptParser.NULL))) !== 0) || ((((_la - 41)) & ~0x1F) === 0 && ((1 << (_la - 41)) & ((1 << (CompiscriptParser.MINUS - 41)) | (1 << (CompiscriptParser.NOT - 41)) | (1 << (CompiscriptParser.LPAREN - 41)) | (1 << (CompiscriptParser.LBRACE - 41)) | (1 << (CompiscriptParser.LBRACKET - 41)) | (1 << (CompiscriptParser.FloatLiteral - 41)) | (1 << (CompiscriptParser.IntegerLiteral - 41)) | (1 << (CompiscriptParser.StringLiteral - 41)) | (1 << (CompiscriptParser.Identifier - 41)))) !== 0)) {
				{
				{
				this.state = 92;
				this.statement();
				}
				}
				this.state = 97;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 98;
			this.match(CompiscriptParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, CompiscriptParser.RULE_statement);
		try {
			this.state = 117;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case CompiscriptParser.LET:
			case CompiscriptParser.VAR:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 100;
				this.variableDeclaration();
				}
				break;
			case CompiscriptParser.CONST:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 101;
				this.constantDeclaration();
				}
				break;
			case CompiscriptParser.FUNCTION:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 102;
				this.functionDeclaration();
				}
				break;
			case CompiscriptParser.CLASS:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 103;
				this.classDeclaration();
				}
				break;
			case CompiscriptParser.PRINT:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 104;
				this.printStatement();
				}
				break;
			case CompiscriptParser.LBRACE:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 105;
				this.block();
				}
				break;
			case CompiscriptParser.IF:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 106;
				this.ifStatement();
				}
				break;
			case CompiscriptParser.WHILE:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 107;
				this.whileStatement();
				}
				break;
			case CompiscriptParser.DO:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 108;
				this.doWhileStatement();
				}
				break;
			case CompiscriptParser.FOR:
				this.enterOuterAlt(_localctx, 10);
				{
				this.state = 109;
				this.forStatement();
				}
				break;
			case CompiscriptParser.FOREACH:
				this.enterOuterAlt(_localctx, 11);
				{
				this.state = 110;
				this.foreachStatement();
				}
				break;
			case CompiscriptParser.TRY:
				this.enterOuterAlt(_localctx, 12);
				{
				this.state = 111;
				this.tryCatchStatement();
				}
				break;
			case CompiscriptParser.SWITCH:
				this.enterOuterAlt(_localctx, 13);
				{
				this.state = 112;
				this.switchStatement();
				}
				break;
			case CompiscriptParser.BREAK:
				this.enterOuterAlt(_localctx, 14);
				{
				this.state = 113;
				this.breakStatement();
				}
				break;
			case CompiscriptParser.CONTINUE:
				this.enterOuterAlt(_localctx, 15);
				{
				this.state = 114;
				this.continueStatement();
				}
				break;
			case CompiscriptParser.RETURN:
				this.enterOuterAlt(_localctx, 16);
				{
				this.state = 115;
				this.returnStatement();
				}
				break;
			case CompiscriptParser.NEW:
			case CompiscriptParser.THIS:
			case CompiscriptParser.TRUE:
			case CompiscriptParser.FALSE:
			case CompiscriptParser.NULL:
			case CompiscriptParser.MINUS:
			case CompiscriptParser.NOT:
			case CompiscriptParser.LPAREN:
			case CompiscriptParser.LBRACKET:
			case CompiscriptParser.FloatLiteral:
			case CompiscriptParser.IntegerLiteral:
			case CompiscriptParser.StringLiteral:
			case CompiscriptParser.Identifier:
				this.enterOuterAlt(_localctx, 17);
				{
				this.state = 116;
				this.expressionStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public block(): BlockContext {
		let _localctx: BlockContext = new BlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, CompiscriptParser.RULE_block);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 119;
			this.match(CompiscriptParser.LBRACE);
			this.state = 123;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << CompiscriptParser.LET) | (1 << CompiscriptParser.VAR) | (1 << CompiscriptParser.CONST) | (1 << CompiscriptParser.FUNCTION) | (1 << CompiscriptParser.CLASS) | (1 << CompiscriptParser.PRINT) | (1 << CompiscriptParser.IF) | (1 << CompiscriptParser.WHILE) | (1 << CompiscriptParser.DO) | (1 << CompiscriptParser.FOR) | (1 << CompiscriptParser.FOREACH) | (1 << CompiscriptParser.BREAK) | (1 << CompiscriptParser.CONTINUE) | (1 << CompiscriptParser.RETURN) | (1 << CompiscriptParser.TRY) | (1 << CompiscriptParser.SWITCH) | (1 << CompiscriptParser.NEW) | (1 << CompiscriptParser.THIS) | (1 << CompiscriptParser.TRUE) | (1 << CompiscriptParser.FALSE) | (1 << CompiscriptParser.NULL))) !== 0) || ((((_la - 41)) & ~0x1F) === 0 && ((1 << (_la - 41)) & ((1 << (CompiscriptParser.MINUS - 41)) | (1 << (CompiscriptParser.NOT - 41)) | (1 << (CompiscriptParser.LPAREN - 41)) | (1 << (CompiscriptParser.LBRACE - 41)) | (1 << (CompiscriptParser.LBRACKET - 41)) | (1 << (CompiscriptParser.FloatLiteral - 41)) | (1 << (CompiscriptParser.IntegerLiteral - 41)) | (1 << (CompiscriptParser.StringLiteral - 41)) | (1 << (CompiscriptParser.Identifier - 41)))) !== 0)) {
				{
				{
				this.state = 120;
				this.statement();
				}
				}
				this.state = 125;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 126;
			this.match(CompiscriptParser.RBRACE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public variableDeclaration(): VariableDeclarationContext {
		let _localctx: VariableDeclarationContext = new VariableDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, CompiscriptParser.RULE_variableDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 128;
			_la = this._input.LA(1);
			if (!(_la === CompiscriptParser.LET || _la === CompiscriptParser.VAR)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 129;
			this.match(CompiscriptParser.Identifier);
			this.state = 131;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === CompiscriptParser.COLON) {
				{
				this.state = 130;
				this.typeAnnotation();
				}
			}

			this.state = 134;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === CompiscriptParser.ASSIGN) {
				{
				this.state = 133;
				this.initializer();
				}
			}

			this.state = 136;
			this.match(CompiscriptParser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public constantDeclaration(): ConstantDeclarationContext {
		let _localctx: ConstantDeclarationContext = new ConstantDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, CompiscriptParser.RULE_constantDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 138;
			this.match(CompiscriptParser.CONST);
			this.state = 139;
			this.match(CompiscriptParser.Identifier);
			this.state = 141;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === CompiscriptParser.COLON) {
				{
				this.state = 140;
				this.typeAnnotation();
				}
			}

			this.state = 143;
			this.match(CompiscriptParser.ASSIGN);
			this.state = 144;
			this.expression();
			this.state = 145;
			this.match(CompiscriptParser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public typeAnnotation(): TypeAnnotationContext {
		let _localctx: TypeAnnotationContext = new TypeAnnotationContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, CompiscriptParser.RULE_typeAnnotation);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 147;
			this.match(CompiscriptParser.COLON);
			this.state = 148;
			this.type();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public initializer(): InitializerContext {
		let _localctx: InitializerContext = new InitializerContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, CompiscriptParser.RULE_initializer);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 150;
			this.match(CompiscriptParser.ASSIGN);
			this.state = 151;
			this.expression();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public expressionStatement(): ExpressionStatementContext {
		let _localctx: ExpressionStatementContext = new ExpressionStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, CompiscriptParser.RULE_expressionStatement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 153;
			this.expression();
			this.state = 154;
			this.match(CompiscriptParser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public printStatement(): PrintStatementContext {
		let _localctx: PrintStatementContext = new PrintStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, CompiscriptParser.RULE_printStatement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 156;
			this.match(CompiscriptParser.PRINT);
			this.state = 157;
			this.match(CompiscriptParser.LPAREN);
			this.state = 158;
			this.expression();
			this.state = 159;
			this.match(CompiscriptParser.RPAREN);
			this.state = 160;
			this.match(CompiscriptParser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public ifStatement(): IfStatementContext {
		let _localctx: IfStatementContext = new IfStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, CompiscriptParser.RULE_ifStatement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 162;
			this.match(CompiscriptParser.IF);
			this.state = 163;
			this.match(CompiscriptParser.LPAREN);
			this.state = 164;
			this.expression();
			this.state = 165;
			this.match(CompiscriptParser.RPAREN);
			this.state = 166;
			this.statement();
			this.state = 169;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 6, this._ctx) ) {
			case 1:
				{
				this.state = 167;
				this.match(CompiscriptParser.ELSE);
				this.state = 168;
				this.statement();
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public whileStatement(): WhileStatementContext {
		let _localctx: WhileStatementContext = new WhileStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, CompiscriptParser.RULE_whileStatement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 171;
			this.match(CompiscriptParser.WHILE);
			this.state = 172;
			this.match(CompiscriptParser.LPAREN);
			this.state = 173;
			this.expression();
			this.state = 174;
			this.match(CompiscriptParser.RPAREN);
			this.state = 175;
			this.statement();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public doWhileStatement(): DoWhileStatementContext {
		let _localctx: DoWhileStatementContext = new DoWhileStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, CompiscriptParser.RULE_doWhileStatement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 177;
			this.match(CompiscriptParser.DO);
			this.state = 178;
			this.statement();
			this.state = 179;
			this.match(CompiscriptParser.WHILE);
			this.state = 180;
			this.match(CompiscriptParser.LPAREN);
			this.state = 181;
			this.expression();
			this.state = 182;
